tests/snapshots/examples_fixtures/type_system__failing__86_hm_mixed_numeric_typed_mismatch.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/86_hm_mixed_numeric_typed_mismatch.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E300]: TYPE UNIFICATION ERROR

Cannot unify Int with Float.

  --> examples/type_system/failing/86_hm_mixed_numeric_typed_mismatch.flx:2:18
  |
2 |     let x: Int = 1 + 2.5
  |                  ^^^^^^^
  |                  ------- expected Int, found Float


--> compiler error[E300]: TYPE UNIFICATION ERROR

The return value of `main` does not match its declared return type.

  --> examples/type_system/failing/86_hm_mixed_numeric_typed_mismatch.flx:3:5
  |
1 | fn main() -> Unit {

  |              ---- `main` was declared to return `Unit`
2 |     let x: Int = 1 + 2.5

3 |     x
  |     ^
  |     - this expression has type `Int`

Help:
  Return a `Unit` value from `main` or change the declared return type.

Found 2 errors.
== stdout ==
<not executed>
